[tool.poetry]
name = "th2-act"
version = "1.0.0"
description = "Python library with useful tools for creating custom Act implementations"
authors = ["TH2-devs <th2-devs@exactprosystems.com>"]
readme = "README.md"
license = "Apache License 2.0"
homepage = "https://github.com/th2-net/th2-act-py"
repository = "https://github.com/th2-net/th2-act-py"
include = [
    "LICENSE",
]
packages = [
    {include = 'th2_act'},
]

[tool.poetry.dependencies]
python = "^3.7"
th2-common = "^3.9.1"
th2-grpc-check1 = "3.6.0.dev2433840021"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"